--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "webpack-cli": "^4.2.0"
   },
   "dependencies": {
-    "extract-text-webpack-plugin": "^3.0.2"
+    "extract-text-webpack-plugin": "^3.0.2",
+    "regenerator-runtime": "^0.13.7"
   }
 }
