--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/preset-env": "^7.12.10",
     "autoprefixer": "^9.0.0",
     "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^2.1.0",
     "cssnano": "^4.1.10",
@@ -29,6 +30,7 @@
   },
   "dependencies": {
     "extract-text-webpack-plugin": "^3.0.2",
+    "flickity": "^2.2.2",
     "regenerator-runtime": "^0.13.7",
     "resolve-url-loader": "^3.1.2"
   }
