--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
   "dependencies": {
     "extract-text-webpack-plugin": "^3.0.2",
     "flickity": "^2.2.2",
+    "path-browserify": "^1.0.1",
     "regenerator-runtime": "^0.13.7",
-    "resolve-url-loader": "^3.1.2"
+    "resolve-url-loader": "^3.1.2",
+    "url": "^0.11.0",
+    "util": "^0.12.3"
   }
 }
