--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "extract-text-webpack-plugin": "^3.0.2",
     "flickity": "^2.2.2",
+    "just-validate": "^1.5.0",
     "path-browserify": "^1.0.1",
     "regenerator-runtime": "^0.13.7",
     "resolve-url-loader": "^3.1.2",
